#13 trying to unify licensing

--- a/web_client.html
+++ b/web_client.html
@@ -94,7 +94,8 @@
 <div id="foot-cont">
   <span>&nbsp;</span>
   <div id="foot">
-	Copyright &copy; 2010 Stendec
+	Copyright &copy; 2010 Stendec<br>
+	Copyright &copy; 2019 theJollySin
   </div>
   <div style="clear:both"></div>
   <div id="debug"></div>
