#13 trying to simplify licenses

--- a/web_client.html
+++ b/web_client.html
@@ -94,8 +94,7 @@
 <div id="foot-cont">
   <span>&nbsp;</span>
   <div id="foot">
-	Copyright &copy; 2010 Stendec<br>
-	Copyright &copy; 2019 theJollySin
+	Copyright &copy; 2019 Velmah
   </div>
   <div style="clear:both"></div>
   <div id="debug"></div>
