--- a/web_client.html
+++ b/web_client.html
@@ -94,7 +94,7 @@
 <div id="foot-cont">
   <span>&nbsp;</span>
   <div id="foot">
-	Copyright &copy; 2019 Velmah
+	Copyright &copy; 2019 Ztilly
   </div>
   <div style="clear:both"></div>
   <div id="debug"></div>
