#17 placeholder for the build/compile script

--- a/web_client.html
+++ b/web_client.html
@@ -3,13 +3,7 @@
 <head>
   <title>Discworld MUD on DecafMUD Client</title>
   <link rel="stylesheet" type="text/css" href="css/main.css" />
-  <script src="js/disc.settings.js" type="text/javascript"></script>
-  <script src="js/dragelement.js" type="text/javascript"></script>
-  <script src="js/disc.menu.js" type="text/javascript"></script>
-  <script src="js/disc.macro.js" type="text/javascript"></script>
-  <script src="js/disc.zmp.js" type="text/javascript"></script>
-  <script src="js/decafmud.js" type="text/javascript"></script>
-  <script src="js/decafmud.encoding.cp437.js" type="text/javascript"></script>
+<!-- JAVASCRIPT -->  <script src="js/disc.settings.js" type="text/javascript"></script><script src="js/dragelement.js" type="text/javascript"></script><script src="js/disc.menu.js" type="text/javascript"></script><script src="js/disc.macro.js" type="text/javascript"></script><script src="js/disc.zmp.js" type="text/javascript"></script><script src="js/decafmud.js" type="text/javascript"></script><script src="js/decafmud.encoding.cp437.js" type="text/javascript"></script>
   <script type="text/javascript">
     var decaf, el, timer;
 
