--- a/web_client.html
+++ b/web_client.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
+  <meta charset="utf-8" />
   <title>Discworld MUD on DecafMUD Client</title>
   <link rel="stylesheet" type="text/css" href="css/main.css" />
-<!-- JAVASCRIPT -->  <script src="js/disc.settings.js" type="text/javascript"></script><script src="js/dragelement.js" type="text/javascript"></script><script src="js/disc.menu.js" type="text/javascript"></script><script src="js/disc.macro.js" type="text/javascript"></script><script src="js/disc.zmp.js" type="text/javascript"></script><script src="js/decafmud.js" type="text/javascript"></script><script src="js/decafmud.encoding.cp437.js" type="text/javascript"></script>
+<!-- REMOVED_WHEN_COMPILING -->  <link rel="stylesheet" type="text/css" href="css/decafmud.css" /><link rel="stylesheet" type="text/css" href="css/decafmud-dark.css" /><link rel="stylesheet" type="text/css" href="css/mud-colors.css" /><script src="js/disc.settings.js" type="text/javascript"></script><script src="js/dragelement.js" type="text/javascript"></script><script src="js/disc.menu.js" type="text/javascript"></script><script src="js/disc.macro.js" type="text/javascript"></script><script src="js/disc.zmp.js" type="text/javascript"></script><script src="js/decafmud.js" type="text/javascript"></script><script src="js/decafmud.encoding.cp437.js" type="text/javascript"></script>
   <script type="text/javascript">
     var decaf, el, timer;
 
