--- a/web_client.html
+++ b/web_client.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <title>Discworld MUD on DecafMUD Client</title>
   <link rel="stylesheet" type="text/css" href="css/main.css" />
-<!-- REMOVED_WHEN_COMPILING -->  <link rel="stylesheet" type="text/css" href="css/decafmud.css" /><link rel="stylesheet" type="text/css" href="css/decafmud-dark.css" /><link rel="stylesheet" type="text/css" href="css/mud-colors.css" /><script src="js/disc.settings.js" type="text/javascript"></script><script src="js/dragelement.js" type="text/javascript"></script><script src="js/disc.menu.js" type="text/javascript"></script><script src="js/disc.macro.js" type="text/javascript"></script><script src="js/disc.zmp.js" type="text/javascript"></script><script src="js/decafmud.js" type="text/javascript"></script><script src="js/decafmud.encoding.cp437.js" type="text/javascript"></script>
+<!-- REMOVED_WHEN_COMPILING -->  <link rel="stylesheet" type="text/css" href="css/decafmud.css" /><link rel="stylesheet" type="text/css" href="css/decafmud-dark.css" /><link rel="stylesheet" type="text/css" href="css/mud-colors.css" /><script src="js/disc.settings.js" type="text/javascript"></script><script src="js/dragelement.js" type="text/javascript"></script><script src="js/disc.menu.js" type="text/javascript"></script><script src="js/disc.macro.js" type="text/javascript"></script><script src="js/disc.zmp.js" type="text/javascript"></script><script src="js/decafmud.js" type="text/javascript"></script><script src="js/decafmud.storage.standard.js" type="text/javascript"></script><script src="js/decafmud.interface.discworld.js" type="text/javascript"></script><script src="js/decafmud.encoding.cp437.js" type="text/javascript"></script>
   <script type="text/javascript">
     var decaf, el, timer;
 
